--- a/.env
+++ b/.env
@@ -1,9 +1,9 @@
-DATABASE_URL=postgres://postgres:1234@localhost:5432/hodlinfo
-DB_USER=postgres
-DB_HOST=localhost
-DB_NAME=hodlinfo
-DB_PASSWORD=1234
-DB_PORT=5432
+# DATABASE_URL=postgres://postgres:1234@localhost:5432/hodlinfo
+# DB_USER=postgre
+# DB_HOST=localhost
+# DB_NAME=hodlinfo
+# DB_PASSWORD=1234
+# DB_PORT=5432
 
 
 
